# PyHunter

./: README.md  scan_targets.py
pyhunter/: .gitignore  README.md  pyproject.toml
pyhunter/examples/: vulnerable_app.py
pyhunter/pyhunter/: __init__.py  cli.py  config.py  models.py
pyhunter/pyhunter/engine/: __init__.py  chainer.py  pypi.py  scanner.py
pyhunter/pyhunter/rules/: __init__.py  _sources.py  build_rce.py  cmd_injection.py  cors_misconfig.py  debug_enabled.py  decorator_exec.py  deser_rce.py  dunder_abuse.py  dynamic_import.py  file_upload_rce.py  hardcoded_secrets.py  header_injection.py  import_time_exec.py  insecure_cookie.py  insecure_random.py  insecure_tls.py  loader.py  log_injection.py  mass_assignment.py  matchers.py  nosql_injection.py  open_redirect.py  path_traversal.py  pickle_socket.py  r01_ssti.py  r02_deser_rce.py  r03_cmd_inject.py  r04_debug_exposed.py  r05_file_upload_rce.py  r06_sqli.py  r07_ssrf.py  r08_xxe.py  r09_path_traversal.py  r10_hardcoded_secrets.py  r11_auth_bypass.py  r12_mass_assign.py  r13_suid_risk.py  r14_writable_path.py  r15_container_escape.py  (+14 more)
pyhunter/pyhunter/skills/: __init__.py  agent_exploit.py  analyze.py  chain.py  context.py  demo.py  enrich.py  explain.py  exploit_gen.py  poc.py  taint_skill.py
pyhunter/scripts/: github_scan.py  scan_targets.py
pyhunter/tests/: test_agent_exploit.py  test_cfg.py  test_chain_rules.py  test_chain_rules_extended.py  test_cli.py  test_integration.py  test_new_rules.py  test_pypi_scanner.py  test_rules.py  test_taint.py  test_taint_analysis.py
(+26 files in other folders)
